2016-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders, magick: Compile clean using GCC with -std=c90.

	* magick/describe.c (DescribeImage): The 'identify' and 'info'
	functionality only shows the pixel read rate if image was not read
	in 'ping' mode.  Provide seconds timing with 6 digits of precision
	since that is what is needed.

2016-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/describe.c (DescribeImage): Include milliseconds
	resolution in elapsed time output.

	* magick/timer.c (ElapsedTime): Use clock_gettime() (when
	available with default linkage) to obtain elapsed time.

2016-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/yuv.c (WriteYUVImage): Fix benign clang compiler warning
	regarding "variable 'x' is incremented both in the loop header and
	in the loop body".

	* configure.ac: Fixes to use clang's OpenMP runtime library
	(-lomp) for clang 3.8 and later.  Specifically tested with clang
	3.8 on Ubuntu 16.04 'xenial'.  Problem was reported by Holger
	Hoffstätte via private email.

	* NEWS.txt: Bring up to date with latest changes.

2016-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Reject abnormally absurd gradient
	size requests (many absurd requests are still allowed).  Provide
	detailed error reports when a gradient is rejected.

	* coders/svg.c: Support units for 'stroke-dashoffset'.

2016-07-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c (EscapeParenthesis): In private email on
	2016-07-07, Gustavo Grieco notified us of a heap overflow in
	EscapeParenthesis().  I was not able to reproduce the issue but
	changed the implementation with the suspicion that the
	implementation has a bug, and due to noticing arbitary limits and
	inefficiency.

2016-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix absolute and arbitrary gradient