@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160808"
-#define public MagickPackageReleaseDate "snapshot-20160808"
+#define public MagickPackageVersionAddendum ".020160814"
+#define public MagickPackageReleaseDate "snapshot-20160814"
