@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2016-08-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/jpeg.c (ReadJPEGImage): Log setting resolution and
+resolution units due to JFIF marker.</li>
+<li>coders/sgi.c (SGIDecode): Fix integer overflow of size type in
+Win64 build where sizeof(long) &lt; sizeof(size_t).</li>
+</ul>
+</blockquote>
 <p>2016-08-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
